--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/oli/Desktop/sesion1/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Matcha</title>
 </head>
 
